# dictate

./: Cargo.toml  README.md
src/: audio.rs  autostart.rs  config.rs  main.rs  process.rs  ui.rs
