[package]
name = "dictate"
version = "0.1.0"
edition = "2021"
description = "Personal push-to-talk dictation for Windows. Hold a key, speak, the text appears where you were typing."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# Global hold-to-talk hotkey. Reports both press and release, and supports
# modifier-only bindings, which RegisterHotKey cannot express.
handy-keys = "0.3"

# Microphone capture and resampling to the 16 kHz mono the model wants.
cpal = "0.18"
rubato = "0.16"

# Speech recognition. ggml-based, loads the same GGUF models Handy uses.
transcribe-cpp = "0.1"

# Text delivery into the focused application.
win-text-inject = "0.1.1"

# Tray icon and the recording bubble are raw Win32: a webview or GUI toolkit for
# a pill-shaped overlay would be the largest dependency in the tree.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

# Autostart via the HKCU Run key.
winreg = "0.55"

[profile.release]
lto = true
codegen-units = 1
strip = true
